--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-share": "^5.1.0",
+    "sass": "^1.72.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
